[package]
name = "aleo-std-profiler"
version = "0.1.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A profiler to measure runtime performance"
license = "GPL-3.0"
edition = "2018"

[dependencies.lazy_static]
version = "1.4.0"
optional = true

[dependencies.colored]
version = "2"
optional = true

[features]
default = ["profiler"]
profiler = [ "colored", "lazy_static" ]
